Add: Componentes do Profile

--- a/project/src/components/bosons/globals.scss
+++ b/project/src/components/bosons/globals.scss
@@ -4,6 +4,7 @@
   --white-100: #FFF;
   --white-80: #FAFAFA;
   --white-60: #EDEDED;
+  --degrade: linear-gradient(87.7deg, #4070F4 0%, #2BD67B 99.89%);
 }
 
 * {
