--- a/project/src/components/molecules/TechTags/style.module.scss
+++ b/project/src/components/molecules/TechTags/style.module.scss
@@ -1,6 +1,7 @@
 .tag{
   background: linear-gradient(87.7deg, #4070F4 0%, #2BD67B 99.89%);
   border-radius: 2rem;
+  transition: 0.3s;
   a{
     text-transform: uppercase;
     font-size: 1.5rem;
@@ -9,5 +10,9 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
+  }
+
+  &:hover{
+    filter: brightness(0.9);
   }
 }
