--- a/project/src/styles/home.module.scss
+++ b/project/src/styles/home.module.scss
@@ -1,9 +1,19 @@
-.mainInformation{
-  margin: 8rem auto;
+.divDegrade {
+  margin-top: 9rem;
+  height: 25rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(87.7deg, #4070f4 0%, #2bd67b 99.89%);
+}
+
+.mainInformation {
+  margin: 4rem auto;
   display: flex;
   flex-direction: row;
   gap: 2.5rem;
-  .projectsLists{
+  .projectsLists {
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
