--- a/project/src/components/organisms/ProjectRepository/style.module.scss
+++ b/project/src/components/organisms/ProjectRepository/style.module.scss
@@ -4,5 +4,11 @@
   gap: 2rem;
   padding: 3rem;
   border-radius: 1rem;
-  background-color: var(--white-100)
+  background-color: var(--white-100);
+
+  .techAndCommits{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
