--- a/project/src/components/molecules/TopicosEducacao/style.module.scss
+++ b/project/src/components/molecules/TopicosEducacao/style.module.scss
@@ -7,3 +7,11 @@
     opacity: 0.5;
   }  
 }
+
+.dark{
+  color: var(--white-80);
+  .date{
+    color: var(--white-80);
+    opacity: 0.5;
+  }  
+}
