--- a/project/src/components/atoms/H3/style.module.scss
+++ b/project/src/components/atoms/H3/style.module.scss
@@ -5,4 +5,9 @@
   line-height: 18px;
   letter-spacing: 0em;
   text-align: left;
+  color: var(--dark-80);
+}
+
+.dark{
+  color: var(--white-80);
 }
