--- a/project/src/components/atoms/Paragrath/style.module.scss
+++ b/project/src/components/atoms/Paragrath/style.module.scss
@@ -5,4 +5,8 @@
   line-height: 25px;
   letter-spacing: 0em;
   text-align: left;
+  color: var(--dark-80);
+}
+.dark{
+  color: var(--white-80);
 }
