--- a/project/src/components/organisms/LayoutCategory/style.module.scss
+++ b/project/src/components/organisms/LayoutCategory/style.module.scss
@@ -4,5 +4,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--white-100)
+  background-color: var(--white-100);
+}
+
+.dark{
+  background-color: var(--dark-80);
 }
