--- a/project/src/styles/globals.scss
+++ b/project/src/styles/globals.scss
@@ -25,7 +25,6 @@ html {
 }
 
 body{
-  background-color: var(--white-60);
   font-size: 1.6rem;
 }
 
@@ -37,4 +36,5 @@ a {
 .container {
   margin: 0 auto;
   width: 123.5rem;
+  display: flex;
 }
