Fix: Ajuste no border botton do header

--- a/project/src/components/layout/Header/style.module.scss
+++ b/project/src/components/layout/Header/style.module.scss
@@ -4,7 +4,7 @@
   top: 0;
   display: flex;
   width: 100%;
-  border-bottom: solid 2px #e7e7e7;
+  border-bottom: solid 2px #b4b4b466;
   background-color: #ededed77;
   -webkit-backdrop-filter: blur(25px);
   backdrop-filter: blur(25px);
